<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nav_overview">Overview</string>
    <string name="nav_assignments">Assignments</string>
    <string name="nav_preferences">Preferences</string>
    <string name="connect_plus">Connect +</string>
    <string name="group_activity_indicator">Group activity indicator</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="id" tools:ignore="Typos">TestId1</string>
    <string name="pass">Password.1</string>
    <string name="incorrect_id">Invalid ID</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="linked_students">Linked Students</string>
    <string name="exit_warning">Press back again to exit</string>
    <string name="student_img">Student profile image.</string>
    <string name="attendance_str">%s attendance</string>
    <string name="grade_str">Grade %d</string>
    <string name="math">Mathematics</string>
    <string name="history">History</string>
    <string name="english">English</string>
    <string name="assn_due">Assignments due within 7 days</string>
    <string name="sw_1">28/10/2022 Letter writing</string>
    <string name="sw_2">22/10/2022 Algebra </string>
    <string name="sw_3">25/10/2022 Statement</string>
    <string name="sw_4">28/10/2022 Trigonometry</string>
    <string name="sw_8">24/10/2022 Essay</string>
    <string name="group_assn">Group</string>
    <string name="details">Details</string>
    <string name="view_assn">View submitted assignment</string>
    <string name="assn_due_str">Assignments due for %s within the next 7 days</string>
    <string name="log_out">Log out</string>
    <string name="select_linked_student">Please select a student</string>
    <string name="email">Email</string>
    <string name="application_not_found">No email applications found</string>
    <string name="nav_discussion">Discussion</string>
    <string name="setting_img">Settings image</string>
    <string name="acc_info">Account information</string>
    <string name="notification_prefs">Notification preferences</string>
    <string name="track_location">Track student location</string>
    <string name="help">Help</string>
    <string name="change_student">Change student</string>
    <string name="logout_warning">Are you sure you want to logout of your account?</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointments">Appointments</string>
</resources>